BE - Leisure bases - create & read
