# backend/src/routes/index.js
@@ -2,5 +2,6 @@ const router = require('express').Router();
 
 router.use('/users', require('./users'));
 router.use('/activities', require('./activities'));
+router.use('/leisures', require('./leisures'));
 
 module.exports = router;
